--- a/.github/workflows/SGSI_Build.yml
+++ b/.github/workflows/SGSI_Build.yml
@@ -39,17 +39,17 @@ jobs:
         run: |
           echo "BUILD_TIME=$(date +%s | md5sum | awk '{print substr($1,1,10)}')" >> $GITHUB_ENV
 
-      - name: Clean up the environment‌‌...
-        run: |
-          # possible fix to failed run
-          if [ -n "$(docker images -q)" ]; then docker rmi "$(docker images -q)"; fi
+#      - name: Clean up the environment‌‌...
+#        run: |
+#          possible fix to failed run
+#          if [ -n "$(docker images -q)" ]; then docker rmi "$(docker images -q)"; fi
           
-          sudo rm -rf /usr/share/dotnet /etc/mysql /etc/php /etc/apt/sources.list.d
-          sudo -E apt-get -y purge azure-cli ghc* zulu* hhvm llvm* firefox google* dotnet* powershell openjdk* mysql* php*
-          sudo -E apt-get update
-          sudo -E apt-get -y autoremove --purge
-          sudo -E apt-get clean
-          df -h
+#          sudo rm -rf /usr/share/dotnet /etc/mysql /etc/php /etc/apt/sources.list.d
+#          sudo -E apt-get -y purge azure-cli ghc* zulu* hhvm llvm* firefox google* dotnet* powershell openjdk* mysql* php*
+#          sudo -E apt-get update
+#          sudo -E apt-get -y autoremove --purge
+#          sudo -E apt-get clean
+#          df -h
 
       - name: Configuration Environment‌‌...
         run: |
